Images and What we do section

--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,4 @@
-<!doctype html>
-
-<!---
-Copyright 2017 The AMP Start Authors. All Rights Reserved.
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-      http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS-IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
--->
-
-<html ⚡="">
-
-<head>
-  <meta charset="utf-8">
-  <title>Agora | Code Community</title>
-  <link rel="canonical" href="https://www.ampstart.com/templates/article.amp">
-  <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-
-  <script async="" src="https://cdn.ampproject.org/v0.js"></script>
-  <script custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js" async></script>
-  <script custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js" async></script>
-
-
-
-  <style amp-boilerplate="">body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate="">body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
-
-
-  <script custom-element="amp-carousel" src="https://cdn.ampproject.org/v0/amp-carousel-0.1.js" async=""></script>
-  <script custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js" async=""></script>
-
-
-  <style amp-custom="">/*! Bassplate | MIT License | http://github.com/basscss/bassplate */
-
-    /*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
+ /*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
     html{font-family:sans-serif;line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}
     body{margin:0}
     article,aside,footer,header,nav,section{display:block}
@@ -329,7 +288,7 @@ limitations under the License.
     .display-none{display:none}
     *{box-sizing:border-box}
     body{background:#fff;color:#4a4a4a;line-height:1.5rem;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,Arial,sans-serif;min-width:315px;overflow-x:hidden;font-smooth:always;-webkit-font-smoothing:antialiased}
-    main{max-width:auto; margin:0 auto}
+    main{max-width:700px;margin:0 auto}
     p{padding:0;margin:0}
     .ampstart-subtitle{color:#4f4f4f;font-size:.875rem}
     .ampstart-accent{color:#003f93}
@@ -448,191 +407,3 @@ limitations under the License.
     .ampstart-social-box{display:-webkit-box;display:-ms-flexbox;display:flex}
     .ampstart-social-box>amp-social-share{background-color:#000}
     .ampstart-icon{fill:#003f93}
-  </style>
-</head>
-<body>
-
-<!-- Start Navbar -->
-<header class="ampstart-headerbar fixed flex justify-start items-center top-0 left-0 right-0 pl2 pr4">
-  <div role="button" on="tap:header-sidebar.toggle" tabindex="0" class="ampstart-navbar-trigger  pr2" >
-    <amp-img src="img/article/Optimized-agora_logo_new.png" height="56" width="45">
-      <noscript>
-        <img src="img/article/Optimized-agora_logo_new.png" height="56" width="45"/>
-      </noscript>
-    </amp-img>
-  </div>
-  <nav class="ampstart-headerbar-nav ampstart-nav xs-hide sm-hide">
-    <ul class="list-reset center m0 p0 flex justify-center nowrap">
-      <li class="ampstart-nav-item ">
-        <a href="#" class="text-decoration-none block">Home</a>
-      </li>
-      <li class="ampstart-nav-item ">
-        <a href="#" class="text-decoration-none block">About Us</a>
-      </li>
-      <li class="ampstart-nav-item ">
-        <a href="#" class="text-decoration-none block">Contact Us</a>
-      </li>
-    </ul>
-  </nav>
-</header>
-
-<!-- Start Sidebar -->
-<amp-sidebar id="header-sidebar" class="ampstart-sidebar px3 md-hide lg-hide" layout="nodisplay">
-  <div class="flex justify-start items-center ampstart-sidebar-header">
-    <div role="button" on="tap:header-sidebar.toggle" tabindex="0" class="ampstart-navbar-trigger items-start">✕</div>
-  </div>
-  <nav class="ampstart-sidebar-nav ampstart-nav">
-    <ul class="list-reset m0 p0 caps h5">
-      <li class="ampstart-nav-item ">
-        <a href="#" class="text-decoration-none block">Home</a>
-      </li>
-      <li class="ampstart-nav-item ">
-        <a href="#" class="text-decoration-none block">About Us</a>
-      </li>
-      <li class="ampstart-nav-item ">
-        <a href="#" class="text-decoration-none block">Contact Us</a>
-      </li>
-    </ul>
-  </nav>
-
-  <ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
-    <li class="mr2">
-        <a href="#" class="inline-block"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="22.2" viewbox="0 0 53 49"><title>Twitter</title><path d="M45 6.9c-1.6 1-3.3 1.6-5.2 2-1.5-1.6-3.6-2.6-5.9-2.6-4.5 0-8.2 3.7-8.2 8.3 0 .6.1 1.3.2 1.9-6.8-.4-12.8-3.7-16.8-8.7C8.4 9 8 10.5 8 12c0 2.8 1.4 5.4 3.6 6.9-1.3-.1-2.6-.5-3.7-1.1v.1c0 4 2.8 7.4 6.6 8.1-.7.2-1.5.3-2.2.3-.5 0-1 0-1.5-.1 1 3.3 4 5.7 7.6 5.7-2.8 2.2-6.3 3.6-10.2 3.6-.6 0-1.3-.1-1.9-.1 3.6 2.3 7.9 3.7 12.5 3.7 15.1 0 23.3-12.6 23.3-23.6 0-.3 0-.7-.1-1 1.6-1.2 3-2.7 4.1-4.3-1.4.6-3 1.1-4.7 1.3 1.7-1 3-2.7 3.6-4.6" class="ampstart-icon ampstart-icon-twitter"></path></svg></a>
-    </li>
-    <li class="mr2">
-        <a href="#" class="inline-block"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="23.6" viewbox="0 0 56 55"><title>Facebook</title><path d="M47.5 43c0 1.2-.9 2.1-2.1 2.1h-10V30h5.1l.8-5.9h-5.9v-3.7c0-1.7.5-2.9 3-2.9h3.1v-5.3c-.6 0-2.4-.2-4.6-.2-4.5 0-7.5 2.7-7.5 7.8v4.3h-5.1V30h5.1v15.1H10.7c-1.2 0-2.2-.9-2.2-2.1V8.3c0-1.2 1-2.2 2.2-2.2h34.7c1.2 0 2.1 1 2.1 2.2V43" class="ampstart-icon ampstart-icon-fb"></path></svg></a>
-    </li>
-    <li class="mr2">
-        <a href="#" class="inline-block"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="18.4" viewbox="0 0 56 43"><title>email</title><path d="M10.5 6.4C9.1 6.4 8 7.5 8 8.9v21.3c0 1.3 1.1 2.5 2.5 2.5h34.9c1.4 0 2.5-1.2 2.5-2.5V8.9c0-1.4-1.1-2.5-2.5-2.5H10.5zm2.1 2.5h30.7L27.9 22.3 12.6 8.9zm-2.1 1.4l16.6 14.6c.5.4 1.2.4 1.7 0l16.6-14.6v19.9H10.5V10.3z" class="ampstart-icon ampstart-icon-email"></path></svg></a>
-    </li>
-
-</ul>
-
-
-</amp-sidebar>
-<!-- End Sidebar -->
-<!-- End Navbar -->
-
-  <!-- Start Fullpage Hero -->
-  <figure class="ampstart-image-fullpage-hero m0 relative mb4">
-
-    <amp-img src="img/opti_logo_full.png" height="700" width="1754" layout="responsive">
-      <noscript>
-        <img src="img/opti_logo_full.png" height="700" width="1754"/>
-      </noscript>
-    </amp-img>
-
-    <footer class="absolute left-0 right-0 bottom-0">
-      <a class="ampstart-readmore py3 caps line-height-2 text-decoration-none center block h5" href="#content">Who Are We?</a>
-    </footer>
-    </figcaption>
-  </figure>
-  <!-- End Fullpage Hero -->
-
-
-
-  <main id="content" role="main" class="">
-    <article class="photo-article">
-      <span class="ampstart-accent block px3 pt2 mb2">WHO ARE WE?</span>
-
-      <p class="ampstart-dropcap mb4 mx3">Agora Code Community’s mission is to grow the community of developers across Africa.
-          To breed a better industry through diversity in developers and development.</p>
-
-      <!-- Start carousel -->
-      <span class="ampstart-accent block px3 pt2 mb2">WHAT DO WE DO?</span>
-      
-		<!-- Start Related Section -->
-		<section class="ampstart-related-section mb4 px3 col-12">
-		  <ul class="ampstart-related-section-items list-reset flex flex-wrap m0">
-		  <li class="col-12 sm-col-3 md-col-3 lg-col-3 pr2 py2">
-				  <!-- Start Image with Caption -->
-				  <figure class="ampstart-image-with-caption m0 relative mb4">
-				    <amp-img src="img/landing/images/opti_puzzle_img.png" width="112.5" height="112.5" layout="responsive" class=""></amp-img>
-			        <figcaption class="h5 mt1 px3">
-			          <h3>Hack</h3>
-			            <span class="ampstart-image-credit block bold">
-			              <p>Share your programing ideas and issues, and we'll help streamline those ideas and solve those problems. Every coding issue is a chance to learn, and we never stops learning!</p>
-			            </span>
-			        </figcaption>
-				  </figure>
-				  <!-- End Image with Caption -->
-		      </li>
-		      <li class="col-12 sm-col-3 md-col-3 lg-col-3 pr2 py2">
-				  <!-- Start Image with Caption -->
-				  <figure class="ampstart-image-with-caption m0 relative mb4">
-				    <amp-img src="img/landing/images/opti_handshake_img.png" width="112.5" height="112.5" layout="responsive" class=""></amp-img>
-			        <figcaption class="h5 mt1 px3">
-			          <h3>Outreach</h3>
-			            <span class="ampstart-image-credit block bold">
-			              We tour schools and community centers to spread our love of code. We provide resources to enable the realization of ideas and technological advancements.
-			            </span>
-			        </figcaption>
-				  </figure>
-				  <!-- End Image with Caption -->
-		      </li>
-		      <li class="col-12 sm-col-3 md-col-3 lg-col-3 pr2 py2">
-
-
-				  <!-- Start Image with Caption -->
-				  <figure class="ampstart-image-with-caption m0 relative mb4">
-				    <amp-img src="img/landing/images/opti_training.png" width="112.5" height="112.5" layout="responsive" class=""></amp-img>
-			        <figcaption class="h5 mt1 px3">
-			          <h3>Training</h3>
-			            <span class="ampstart-image-credit block bold">
-			              Need Training? Don't worry, we've got you. We provide training sessions by IT personnel and communication volunteers, teaching coding, programming and computing.
-			            </span>
-			        </figcaption>
-				  </figure>
-				  <!-- End Image with Caption -->
-		      </li>
-		      <li class="col-12 sm-col-3 md-col-3 lg-col-3 pr2 py2">
-
-
-				  <!-- Start Image with Caption -->
-				  <figure class="ampstart-image-with-caption m0 relative mb4">
-				    <amp-img src="img/landing/images/opti_globe.png" width="112.5" height="112.5" layout="responsive" class=""></amp-img>
-				        <figcaption class="h5 mt1 px3">
-				          <h3>Community</h3>
-				            <span class="ampstart-image-credit block bold">
-				              Our community breeds an enabling environment for freelance developers to get together, share ideas, resources and opportunities for jobs and networking.
-				            </span>
-				        </figcaption>
-				  </figure>
-				  <!-- End Image with Caption -->
-		      </li>
-		  </ul>
-		</section>
-		<!-- End Related Section -->
-    </article>
-  </main>
-
-  <!-- Start Footer -->
-  <footer class="ampstart-footer flex flex-column items-center px3">
-
-
-<ul class="ampstart-social-follow list-reset flex justify-around items-center flex-wrap m0 mb4">
-    <li class="mr2">
-        <a href="#" target="_blank" class="inline-block"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="22.2" viewbox="0 0 53 49"><title>Twitter</title><path d="M45 6.9c-1.6 1-3.3 1.6-5.2 2-1.5-1.6-3.6-2.6-5.9-2.6-4.5 0-8.2 3.7-8.2 8.3 0 .6.1 1.3.2 1.9-6.8-.4-12.8-3.7-16.8-8.7C8.4 9 8 10.5 8 12c0 2.8 1.4 5.4 3.6 6.9-1.3-.1-2.6-.5-3.7-1.1v.1c0 4 2.8 7.4 6.6 8.1-.7.2-1.5.3-2.2.3-.5 0-1 0-1.5-.1 1 3.3 4 5.7 7.6 5.7-2.8 2.2-6.3 3.6-10.2 3.6-.6 0-1.3-.1-1.9-.1 3.6 2.3 7.9 3.7 12.5 3.7 15.1 0 23.3-12.6 23.3-23.6 0-.3 0-.7-.1-1 1.6-1.2 3-2.7 4.1-4.3-1.4.6-3 1.1-4.7 1.3 1.7-1 3-2.7 3.6-4.6" class="ampstart-icon ampstart-icon-twitter"></path></svg></a>
-    </li>
-    <li class="mr2">
-        <a href="#" target="_blank" class="inline-block"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="23.6" viewbox="0 0 56 55"><title>Facebook</title><path d="M47.5 43c0 1.2-.9 2.1-2.1 2.1h-10V30h5.1l.8-5.9h-5.9v-3.7c0-1.7.5-2.9 3-2.9h3.1v-5.3c-.6 0-2.4-.2-4.6-.2-4.5 0-7.5 2.7-7.5 7.8v4.3h-5.1V30h5.1v15.1H10.7c-1.2 0-2.2-.9-2.2-2.1V8.3c0-1.2 1-2.2 2.2-2.2h34.7c1.2 0 2.1 1 2.1 2.2V43" class="ampstart-icon ampstart-icon-fb"></path></svg></a>
-    </li>
-    <li class="mr2">
-        <a href="#" target="_blank" class="inline-block"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="28.5" viewbox="0 0 43 51"><title>pinterest</title><path d="M-13.6-5c0-1.6.2-3 .8-4.4.5-1.4 1.2-2.6 2.2-3.6.9-1 2-1.9 3.2-2.6 1.2-.8 2.5-1.3 3.9-1.7 1.5-.4 2.9-.5 4.4-.5 2.2 0 4.3.4 6.2 1.4 1.9.9 3.5 2.3 4.7 4.1 1.2 1.9 1.8 3.9 1.8 6.2 0 1.4-.1 2.7-.4 4C13-.8 12.5.5 12 1.7c-.6 1.2-1.3 2.3-2.2 3.2C9 5.8 8 6.6 6.7 7.1c-1.2.6-2.5.9-4 .9-1 0-1.9-.3-2.9-.7-.9-.5-1.6-1.1-2-1.9-.1.5-.3 1.4-.6 2.4-.3 1.1-.4 1.7-.5 2-.1.3-.2.9-.4 1.6-.3.7-.4 1.2-.6 1.5-.1.3-.4.7-.7 1.3-.3.6-.6 1.2-1 1.7-.3.5-.7 1.1-1.3 1.8l-.3.1-.2-.2c-.2-2.2-.3-3.6-.3-4 0-1.3.2-2.8.5-4.4.3-1.7.8-3.7 1.4-6.2.6-2.5 1-3.9 1.1-4.4-.5-.9-.7-2.1-.7-3.6 0-1.2.4-2.3 1.1-3.3.8-1.1 1.7-1.6 2.8-1.6.9 0 1.6.3 2.1.9.4.6.7 1.3.7 2.2 0 .9-.3 2.3-1 4.1C-.7-.9-1 .4-1 1.3c0 .9.3 1.6 1 2.2.6.6 1.4.9 2.3.9.8 0 1.5-.2 2.2-.5.6-.4 1.2-.9 1.6-1.5.5-.6.9-1.3 1.2-2 .4-.8.6-1.5.8-2.4.2-.8.4-1.6.5-2.4.1-.7.1-1.4.1-2.1 0-2.5-.8-4.4-2.3-5.8-1.6-1.4-3.6-2.1-6.1-2.1-2.8 0-5.2 1-7.1 2.8-1.9 1.9-2.9 4.2-2.9 7.1 0 .6.1 1.2.3 1.8.2.6.4 1.1.6 1.4.2.3.4.7.5 1 .2.3.3.5.3.6 0 .4-.1.9-.3 1.6-.2.6-.5 1-.8 1 0 0-.1-.1-.4-.1-.7-.2-1.3-.6-1.9-1.2-.5-.6-1-1.3-1.3-2-.3-.8-.5-1.6-.7-2.4-.2-.7-.2-1.5-.2-2.2z" transform="translate(21.734 23.748)" class="ampstart-icon ampstart-icon-pinterest"></path></svg></a>
-    </li>
-    <li class="mr2">
-        <a href="#" target="_blank" class="inline-block"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="18.4" viewbox="0 0 56 43"><title>email</title><path d="M10.5 6.4C9.1 6.4 8 7.5 8 8.9v21.3c0 1.3 1.1 2.5 2.5 2.5h34.9c1.4 0 2.5-1.2 2.5-2.5V8.9c0-1.4-1.1-2.5-2.5-2.5H10.5zm2.1 2.5h30.7L27.9 22.3 12.6 8.9zm-2.1 1.4l16.6 14.6c.5.4 1.2.4 1.7 0l16.6-14.6v19.9H10.5V10.3z" class="ampstart-icon ampstart-icon-email"></path></svg></a>
-    </li>
-</ul>
-      <nav class="ampstart-footer-nav">
-        <ul class="list-reset flex flex-wrap mb3">
-            <li class="px1"><a class="text-decoration-none caps h5" href="#">About</a></li>
-            <li class="px1"><a class="text-decoration-none caps h5" href="#">Contact</a></li>
-            <li class="px1"><a class="text-decoration-none caps h5" href="#">Terms</a></li>
-        </ul>
-      </nav>
-      <small>© Your Company, 2016</small>
-  </footer>
-  <!-- End Footer -->
-</body>
-</html>
